--- a/ingredients.html
+++ b/ingredients.html
@@ -8,27 +8,13 @@
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <a href="index.html" style="color: white; text-decoration: none;">Pasta World</a>
-        </div>
-        <ul>
-            <li><a href="index.html">回首頁</a></li>
-            <li><a href="noodles.html">麵條種類</a></li>
-            <li><a href="sauces.html">經典醬汁</a></li>
-            <li>配料資訊</li>
-            <li><a href="customize.html">自選組合</a></li>
-        </ul>
-    </nav>
     <main>
-        <h2>可選配料</h2>
-        <div class="ingredient-group">
-            <div class="ing-card" title="熱量: 150kcal">
-                <p>帕瑪森起司 (Hover 我看資訊)</p>
-                <input type="checkbox" value="Cheese"> 加入清單
-            </div>
+    <h2>配料資訊一覽</h2>
+    <div id="ingredient-table-container" class="table-responsive">
         </div>
     </main>
+    <script src="js/script.js"></script>
 </body>
+
 
 </html>
