Add navigation bar to ingredients page

--- a/ingredients.html
+++ b/ingredients.html
@@ -8,6 +8,18 @@
 </head>
 
 <body>
+    <nav>
+        <div class="logo">
+            <a href="index.html" style="color: white; text-decoration: none;">Pasta World</a>
+        </div>
+        <ul>
+            <li><a href="index.html">回首頁</a></li>
+            <li><a href="noodles.html">麵條種類</a></li>
+            <li><a href="sauces.html>經典醬汁</a></li>
+            <li><a">配料資訊</a></li>
+            <li><a href="customize.html">自選組合</a></li>
+        </ul>
+    </nav>
     <main>
     <h2>配料資訊一覽</h2>
     <div id="ingredient-table-container" class="table-responsive">
@@ -18,3 +30,4 @@
 
 
 </html>
+
