Enhance index.html with features and hot picks sections
Added features section with noodle and sauce cards, and a hot picks section for today's recommendations.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,33 @@
     </nav>
     <header class="hero">
         <h1>歡迎來到義大利麵世界</h1>
-        <p>探索最道地的麵條與醬汁組合</p>
-        <a href="customize.html" class="btn">開始自訂你的餐點</a>
+        <section class="features">
+    <div class="grid">
+        <div class="card">
+            <h3>探索麵條</h3>
+            <p>從 Spaghetti 到 Penne，了解每種麵體的靈魂。</p>
+            <a href="noodles.html">查看更多</a>
+        </div>
+        <div class="card">
+            <h3>完美醬汁</h3>
+            <p>酸甜紅醬、濃郁白醬，尋找最契合的搭配。</p>
+            <a href="sauces.html">查看更多</a>
+        </div>
+        <div class="card">
+            <h3>隨機挑戰</h3>
+            <p>猶豫不決？試試我們的「今日組合」功能！</p>
+            <a href="customize.html">立即嘗試</a>
+        </div>
+    </div>
+</section>
+
+<section id="hot-picks">
+    <h2>今日推薦 (Fetch 測試區)</h2>
+    <div id="index-noodle-display" class="grid">
+        </div>
+</section>
     </header>
 </body>
+
 
 </html>
