--- a/customize.html
+++ b/customize.html
@@ -29,6 +29,11 @@
             <select id="sauce-select" required>
                 <option value="">--請選擇醬汁--</option>
             </select>
+            <div id="ingredients-selection" style="margin: 15px 0;">
+                <p><strong>選擇配料 (建議 1~2 種)：</strong></p>
+                <div id="ingredients-checkboxes" class="grid" style="grid-template-columns: repeat(2, 1fr); gap: 10px;">
+                </div>
+            </div>
             <div class="button-group">
                 <button type="submit">確認組合</button>
                 <button type="button" id="random-btn" style="background-color: var(--primary-red);">今日組合</button>
@@ -45,3 +50,4 @@
 
 
 </html>
+
