Add images to noodle and sauce feature cards
Added images to noodle and sauce sections.

--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
         <section class="features">
     <div class="grid">
         <div class="card">
+            <img src="assets/index_noodles">
             <h3>探索麵條</h3>
             <p>從 Spaghetti 到 Penne，了解每種麵體的靈魂。</p>
             <a href="noodles.html">查看更多</a>
         </div>
         <div class="card">
+            <img src="assets/index_sauces">
             <h3>完美醬汁</h3>
             <p>酸甜紅醬、濃郁白醬，尋找最契合的搭配。</p>
             <a href="sauces.html">查看更多</a>
         </div>
         <div class="card">
+            <img src="assets/index_costomize">
             <h3>隨機挑戰</h3>
             <p>猶豫不決？試試我們的「今日組合」功能！</p>
             <a href="customize.html">立即嘗試</a>
@@ -50,3 +53,4 @@
 
 
 </html>
+
