--- a/customize.html
+++ b/customize.html
@@ -36,7 +36,7 @@
             </div>
             <div class="button-group">
                 <button type="submit">確認組合</button>
-                <button type="button" id="random-btn" style="background-color: var(--primary-red);">今日組合</button>
+                <button type="button" id="random-btn" style="background-color: var(--primary-red);">拯救選擇困難</button>
             </div>
         </form>
 
@@ -50,4 +50,5 @@
 
 
 </html>
+
 
