--- a/sauces.html
+++ b/sauces.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">回首頁</a></li>
             <li><a href="noodles.html">麵條種類</a></li>
-            <li><a>經典醬汁</a></li>
+            <li>經典醬汁</li>
             <li><a href="ingredients.html">配料資訊</a></li>
             <li><a href="customize.html">自選組合</a></li>
         </ul>
@@ -29,3 +29,4 @@
 
 
 </html>
+
