Fix HTML structure and navigation links

--- a/ingredients.html
+++ b/ingredients.html
@@ -13,10 +13,10 @@
             <a href="index.html" style="color: white; text-decoration: none;">Pasta World</a>
         </div>
         <ul>
-            <li><a href="index.html">回首頁</a></li>
+            <li><a href="index.html">首頁</a></li>
             <li><a href="noodles.html">麵條種類</a></li>
-            <li><a href="sauces.html>經典醬汁</a></li>
-            <li><a">配料資訊</a></li>
+            <li><a href="sauces.html">經典醬汁</a></li>
+            <li>配料資訊</li>
             <li><a href="customize.html">自選組合</a></li>
         </ul>
     </nav>
@@ -30,4 +30,5 @@
 
 
 </html>
+
 
