Enhance hero section with introductory content
Added introductory text to the hero section.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
         </ul>
     </nav>
     <header class="hero">
+        <div class="hero-content">
         <h1>歡迎來到義大利麵世界</h1>
+        <p class="intro-text">
+            義大利麵（Pasta）不僅是義大利的國民美食，更是一種風靡全球的飲食藝術。
+            從杜蘭小麥製成的彈牙麵體，到慢火熬煮的靈魂醬汁，每一種組合都承載著地中海的陽光與熱情。
+            在這裡，我們邀請您一同探索麵條的奧祕、發掘醬汁的故事，並透過「驚喜義瞬間」找到專屬您的命定美味。
+        </p>
+    </div>
         <section class="features">
     <div class="grid">
         <div class="card">
@@ -49,6 +56,7 @@
 
 
 </html>
+
 
 
 
