--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="intro-text">
             義大利麵（Pasta）不僅是義大利的國民美食，更是一種風靡全球的飲食藝術。
             從杜蘭小麥製成的彈牙麵體，到慢火熬煮的靈魂醬汁，每一種組合都承載著地中海的陽光與熱情。
-            在這裡，我們邀請您一同探索麵條的奧祕、發掘醬汁的故事，並透過「驚喜義瞬間」找到專屬您的命定美味。
+            在這裡，我們邀請您一同探索麵條的奧祕、發掘醬汁的故事，並透過自選組合找到專屬您的命定美味。
         </p>
     </div>
         <section class="features">
@@ -37,14 +37,14 @@
         </div>
         <div class="card">
             <img src="assets/index_sauces.jpg">
-            <h3>完美醬汁</h3>
-            <p>酸甜紅醬、濃郁白醬，尋找最契合的搭配。</p>
+            <h3>多變醬汁</h3>
+            <p>酸甜紅醬、濃郁白醬，尋找最適合你的義大利麵基底。</p>
             <a href="sauces.html">查看更多</a>
         </div>
         <div class="card">
             <img src="assets/index_costomize.jpg">
-            <h3>隨機挑戰</h3>
-            <p>猶豫不決？試試我們的「今日組合」功能！</p>
+            <h3>隨心搭配</h3>
+            <p>挑選屬於自己的專屬組合\n猶豫不決？試試我們的「拯救選擇困難」功能！</p>
             <a href="customize.html">立即嘗試</a>
         </div>
     </div>
@@ -56,6 +56,7 @@
 
 
 </html>
+
 
 
 
