Clean up index.html formatting and whitespace
Removed unnecessary whitespace and fixed minor formatting issues.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="card">
             <img src="assets/index_costomize.jpg">
             <h3>隨心搭配</h3>
-            <p>挑選屬於自己的專屬組合\n猶豫不決？試試我們的「拯救選擇困難」功能！</p>
+            <p>挑選屬於自己的專屬組合，還是猶豫不決?試試我們的「拯救選擇困難」功能！</p>
             <a href="customize.html">立即嘗試</a>
         </div>
     </div>
@@ -56,6 +56,7 @@
 
 
 </html>
+
 
 
 
