Update sauces.html to include SweetAlert2 CDN
Replaced local script with SweetAlert2 CDN and added a new script tag.

--- a/sauces.html
+++ b/sauces.html
@@ -24,9 +24,11 @@
     <h2>醬汁口味建議</h2>
     <div id="sauce-list" class="grid"> </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
     </body>
 
 
 </html>
+
 
