--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 </section>
-        <a href="document.pdf" target="_blank">專案說明文件</a>
+        <a href="https://docs.google.com/presentation/d/1OT60Vrzcjwjwib0bNhPlXPfv_0gX6uur-L27ou34UPo/edit?usp=sharing" target="_blank">專案說明文件</a>
 
 
     </header>
@@ -57,6 +57,7 @@
 
 
 </html>
+
 
 
 
