--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <div class="logo">Pasta World</div>
         <ul>
+            <li><a href="https://docs.google.com/presentation/d/1OT60Vrzcjwjwib0bNhPlXPfv_0gX6uur-L27ou34UPo/edit?usp=sharing" target="_blank">專案說明文件</a></li>
             <li><a href="index.html">首頁</a></li>
             <li><a href="noodles.html">麵條種類</a></li>
             <li><a href="sauces.html">經典醬汁</a></li>
@@ -49,14 +50,14 @@
         </div>
     </div>
 </section>
-        <a href="https://docs.google.com/presentation/d/1OT60Vrzcjwjwib0bNhPlXPfv_0gX6uur-L27ou34UPo/edit?usp=sharing" target="_blank">專案說明文件</a>
-
+        
 
     </header>
 </body>
 
 
 </html>
+
 
 
 
